<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="accessibility_overflow" translatable="false">Accessibility Overflow</string>

    <string name="add_new_download">Add new download</string>
    <string name="add_to_download">Add to download</string>

    <string name="another">Another</string>

    <string name="app_language">Language</string>

    <string name="banner">A banner</string>

    <string name="basic">Basic</string>

    <string name="cancel">Cancel</string>

    <string name="cancelled">Cancelled</string>


    <string name="choose_number_connections">Choose number connections</string>
    <string name="choose_number_downloads">Choose max number simultaneous downloads</string>

    <string name="clear">Clear</string>
    <string name="clear_all">Clear all tasks</string>

    <string name="connecting">Connecting…</string>

    <string name="connections">connections</string>
    <string name="connections_per_task">Connections Per Task</string>

    <string name="content_provider">Content Provider</string>
    <string name="content_provider_description">A note app using SQLite to store data</string>


    <string name="creation_time">Created at</string>

    <string name="dangerous_divider" translatable="false">dangerous_divider</string>

    <string name="downloaded">Downloaded</string>
    <string name="downloaded_size">Downloaded Size</string>

    <string name="downloader">Downloader</string>
    <string name="downloader_notification_chanel_description">Downloader Service created by Service Training</string>
    <string name="downloader_notification_chanel_name">Downloader Service</string>
    <string name="downloader_service">Downloader Service</string>

    <string name="downloading">Downloading</string>

    <string name="downloads_description">A file downloader application</string>
    <string name="downloads_folder">Downloads Folder</string>
    <string name="downloads_same_time">downloads</string>

    <string name="execution_time">Executed at</string>

    <string name="failed">Failed</string>

    <string name="finish_service">Finish Service</string>

    <string name="finishing_time">Finished at</string>

    <string name="focus_divider" translatable="false">focus</string>

    <string name="fundamental">Fundamental</string>

    <string name="go_to_download_folder">Go to downloads folder</string>

    <string name="invalid_section">Invalid Section</string>
    <string name="invalid_url">Invalid Url</string>

    <string name="layout">Layout</string>

    <string name="link">URL Link</string>

    <string name="menu" translatable="false">Training Menu</string>

    <string name="message">Message</string>

    <string name="multithreading">Multithreading</string>
    <string name="multithreading_description">Do something in background</string>

    <string name="network">Network</string>
    <string name="network_description">Network handler and JSON Parsing</string>

    <string name="new_task">New Task</string>

    <string name="no">No</string>

    <string name="normal" translatable="false">normal</string>

    <string name="note_app_description">A simple note app using SQLite to store data</string>

    <string name="notes">Notes</string>

    <string name="notification_channel_description">Dịch vụ lắng nghe thời gian được tạo bởi Service Training</string>

    <string name="notify_will_appear_here">Notify will appear here!</string>

    <string name="open">Open</string>

    <string name="or">Or</string>

    <string name="parent_folder">Parent folder</string>

    <string name="paste_and_go">Paste and go</string>

    <string name="path">Path</string>

    <string name="pause">Pause</string>

    <string name="paused">Paused</string>

    <string name="pending">Pending</string>


    <string name="progress">Progress</string>

    <string name="properties">Properties</string>

    <string name="restart">Restart</string>
    <string name="restart_all">Restart all tasks</string>

    <string name="resume">Resume</string>

    <string name="running">Running</string>

    <string name="service">Service</string>
    <string name="service_description">Create a simple foreground service</string>

    <string name="settings">Settings</string>

    <string name="simultaneous_downloads">Simultaneous downloads</string>

    <string name="size">Size</string>

    <string name="sqlite_note_app">SQLite Note App</string>

    <string name="start_new_service">Start New Service</string>

    <string name="state">State</string>



    <string name="support_resume">Support resume</string>



    <string name="time_track_service">Time Track Service</string>
    <string name="time_track_service_channel" translatable="false">Time Track Service Channel</string>

    <string name="type_the_url">Put the download link here…</string>

    <string name="users">Users</string>

    <string name="warning_divider">warning_divider</string>

    <string name="weather">Weather</string>

    <string name="yes">Yes</string>
    <string name="application_name" translatable="false">@string/menu</string>
    <string name="running_duration">Running</string>
    <string name="connections_number">Connections number</string>
    <string name="weather_app">Weather App</string>
    <string name="weather_app_description">A weather app fetching data from internet</string>
    <string name="user_list">User List</string>
    <string name="user_list_description">A list that shows numerous user, show a profile on click item</string>
    <string name="other">Other</string>
    <string name="pipe_example">Pipe Example</string>
    <string name="pipe_example_description">Simple program that using pipes.</string>
    <string name="restart_selected_tasks">Restart all selected items</string>
    <string name="clear_selected_tasks">Clear all selected items</string>
    <string name="title">Title</string>
    <string name="write_something_here">Write something here…</string>
    <string name="try_to_resume">Try to resume</string>
    <string name="choose_this_folder">Choose this folder</string>
    <string name="folder_chooser" translatable="false">Folder Chooser</string>

    <string name="download_completed">Download completed</string>
    <string name="duplicate">Duplicate</string>
    <string name="error_permissions_new_download_dialog">Couldn\'t create new download task because you denied permissions!</string>
    <string name="error_permissions_append_task">Couldn\'t add new task because application doesn\'t have storage permissions!</string>
    <string name="error_permissions_resume_download">Couldn\'t resume download task without storage permissions!</string>
    <string name="error_permissions_restart">Couldn\'t restart task without storage permissions!</string>
    <string name="error_permissions_try_to_resume">Couldn\'t resume download task without storage permissions!</string>
    <string name="error_permissions_open_file">Couldn\'t open without storage permissions!</string>
    <string name="tap_to_see_detail">tap to see detail</string>
    <string name="index">Identification</string>
    <string name="success">Success</string>
    <string name="failed_notification_message">Failed to download file. %1$s. Tap for more info.</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="opengl">Open GL</string>
    <string name="opengl_description">Learn how to create graphics</string>
    <string name="quick_download_notification_title">Quick download from this url</string>
    <string name="download_now">Download now</string>
    <string name="open_in_app">Edit</string>
    <string name="photo3D">Photo 3D</string>
    <string name="photo3D_description">A Photo 3d viewer</string>
    <string name="choose_original_photo">Choose Original Photo</string>
    <string name="choose_depth_photo">Choose Depth Photo</string>
    <string name="photo3D_dynamic">Dynamic Shader</string>
    <string name="dynamic_shader_description">for Photo 3D Viewer</string>
    <string name="simple_bitmap">Simple Bitmap</string>
    <string name="simple_bitmap_description">Draw a photo in the screen</string>
    <string name="camera">Camera</string>
    <string name="camera_description">Camera using TextureView</string>

    <string name="app_require_permissions">Permission required</string>
    <string name="access_external_storage">Access External Storage</string>
    <string name="access_camera">Access Camera</string>
    <string name="storage_permission_description">Scanner requires storage permission to run correctly. Just accept the dialog that appears in next screen.</string>
    <string name="camera_permisison_description">Allow Scanner access camera to take photos. Just accept the dialog that appear in next screen.</string>
    <string name="permission_description">Scanner requires permission to run correctly. Please accept following dialogs that appear in next screen.</string>
    <string name="cameraX">Camera X</string>
    <string name="cameraX_description">Camera X Api in Support Library</string>
    <string name="cameraKit">CameraKit</string>
    <string name="cameraKit_description">Camera using CameraKit Library</string>
    <string name="new_feeds">New Feeds</string>
    <string name="news_feed_3d">News Feed 3D</string>
    <string name="news_feed_3d_description">News feed likely with photo 3D item</string>
    <string name="vr_sample">VR Sample</string>
    <string name="vr_list_sample">VR Sample List</string>
    <string name="vr">VR Photography</string>
    <string name="vr_description">View some panorama photos</string>
    <string name="vr_sample_description">Show a fullscreen panorama photo</string>
    <string name="vr_list_description">Show a panorama photos newsfeed</string>
    <string name="learn_how_to_create_3d_photos">Learn how to create 3D photos</string>
    <string name="vr_viewer">View VR</string>
    <string name="vr_watch_description">View VR Photos in the gallery</string>
    <string name="sample_mode">Sample Mode</string>
    <string name="gallery_chooser_mode">Choose In Gallery Mode</string>
    <string name="choose_vr_photo">Choose VR Photo</string>
    <string name="choose_vr_photo_description">View vr photo in the gallery</string>
    <string name="choose_in_gallery">Choose in gallery</string>
    <string name="air_hockey">Air Hockey</string>
    <string name="air_hockey_description">Simple game using OpenGL</string>
    <string name="notes_detail">Notes</string>
    <string name="fullscreen_vr_view">Fullscreen VR</string>
    <string name="navigate_activity">Navigate Activity</string>
    <string name="extension">Extension</string>
    <string name="index_list">Index List</string>
    <string name="index_list_description">The index list of all activites</string>
    <string name="set_launcher_actitivy">Set Launcher Activity</string>
    <string name="set_launcher_description">Choose the startup activity</string>

</resources>
