<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="16dp"
    android:clickable="true"
    tools:layout_marginTop="32dp"
    android:focusable="true"
    app:cardBackgroundColor="#171228"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:background="@android:color/transparent"
            android:background="@drawable/gradient_heavy_blue">
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task"
                android:layout_marginTop="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/helvetica_font"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/FlatWhite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/close"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/url_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/url_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/rounded_corner_without_border_dark"
                    android:hint="@string/type_the_url"
                    android:inputType="textUri"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_public_black_24dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="12dp"
                    android:singleLine="true"
                    android:textColor="@color/FlatWhite"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/download_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/add_to_download"
                android:textSize="17sp"
                android:textColor="@color/FlatWhite"
                android:textStyle="bold"
                tools:background="@drawable/background_round_dark"
                app:layout_constraintTop_toBottomOf="@id/url_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/or"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textSize="15sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColor="#DDD"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/download_button"/>

            <TextView
                android:id="@+id/paste_and_go_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="30dp"
                tools:background="@drawable/background_round_dark_border"
                android:text="@string/paste_and_go"
                tools:textColor="@color/dark_666"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/helvetica_font"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/paste_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                app:layout_constraintStart_toStartOf="@id/paste_and_go_button"
                app:layout_constraintTop_toTopOf="@id/paste_and_go_button"
                app:layout_constraintBottom_toBottomOf="@id/paste_and_go_button"
                android:src="@drawable/ic_insert_link_black_24dp"
                tools:tint="@color/dark_666"
                android:focusable="true"
                android:clickable="true"
                android:padding="12dp"/>

            <ImageView
                android:id="@+id/close"
                android:layout_width="100dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/url_input_layout"
                android:src="@drawable/close"
                android:tint="#AAA"
                android:focusable="true"
                android:clickable="true"
                android:padding="30dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>